# vector_fields

./: plotting_capacitor_vec_lines.ipynb  pyproject.toml  readme.md
.virtual_documents/: nb1.ipynb
