[tool.poetry]
name = "vector_fields"
version = "0.1.0"
description = "code to help me visualize electric and magnetic fields for physics"
authors = ["eo1989 <eorlowski6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = { version = "^1.21.4", python = ">=3.9,<3.11" }
scipy = { version = "^1.7.3", python = ">=3.9,<3.11" }
matplotlib = "^3.5.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"
statistics = "^1.0.3"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.1"
sklearn = "^0.0"
more-itertools = "^8.12.0"
bokeh = "^2.4.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.1"
jupytext = "^1.13.1"
nbconvert = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
